# laminate-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
laminate_analysis/: effective_laminate.py  main.py  materials.py  micromechanics.py
tests/: test_laminate_analysis.py
