[tool.poetry]
name = "laminate-analysis"
version = "0.1.0"
description = ""
authors = ["Dmytro <kuksenko.dima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
